# pylib

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  release-pr.yaml  release.yaml
docs/: README.md  api.md  releases.md
src/pylib/: __init__.py  pylib.py
tests/: test_pylib.py
