[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",  # Hatch still includes `docs/README.md` if `project.readme` is set.
  "/tests",
  ".gitignore",
  ".readthedocs.yaml",
  "CHANGELOG.md",
  "cliff.toml",
  "mkdocs.yml",
]


[tool.hatch.build.targets.wheel]
packages = ["src/pylib"]  # Mandatory if project name and module import name are different.


[project]
name = "ss249tp-pylib"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "ss249tp", email = "ss249.tp@gmail.com" }
]
readme = "docs/README.md"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = []


[dependency-groups]
dev = [
    "mkdocs-material",
    "mkdocstrings-python",
    "pytest",
    "pytest-cov",
]


[project.optional-dependencies]
cpu = [
    "torch",
]
gpu = [
    "torch",
]


[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "gpu" }],
]


[tool.uv.sources]
torch = [
    {index = "torch-cpu", extra = "cpu"},
    {index = "torch-gpu", extra = "gpu"},
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[project.urls]
Homepage = "https://github.com/ss249tp/pylib"
Documentation = "https://ss249tp-pylib.readthedocs.io"
Issues = "https://github.com/ss249tp/pylib/issues"
